[package]
name = "Kcve_rust"
version = "0.1.0"
edition = "2021"
authors = ["KC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = "1.0.111"
url = "2.5.0"
argparse-rs = "0.1.0"
clap = { version = "4.5.0", features = ["derive"] }
chrono = "0.4.33"
